--- a/src/css/list.css
+++ b/src/css/list.css
@@ -32,6 +32,10 @@ li {
   letter-spacing: 2px;
 }
 
+#common-nav li a {
+  color: white;
+}
+
 #common-nav li:hover {
   background: #e4556d;
 }
@@ -220,6 +224,7 @@ li {
 .body_wrap {
   margin-top: 10px;
   width: 100%;
+  height: 5400px;
 }
 
 .body_wrap .goods_nav {
@@ -320,7 +325,6 @@ li {
 .body_wrap .goods_content {
   margin: 35px auto 0;
   width: 1200px;
-  /* height: 1000px; */
 }
 
 .body_wrap .goods_content .goods {
@@ -351,6 +355,7 @@ li {
 .body_wrap .goods_content .goods > p {
   font-size: 13px;
   padding: 0 5px;
+  color: #535353;
 }
 
 .body_wrap .goods_content .goods .price {
@@ -360,6 +365,7 @@ li {
 
 .body_wrap .goods_content .goods .price span {
   float: left;
+  color: black;
 }
 
 .body_wrap .goods_content .goods .price span:nth-of-type(1),
@@ -382,6 +388,105 @@ li {
 .body_wrap .goods_content .goods .price span:nth-of-type(5),
 .body_wrap .goods_content .goods .price span:nth-of-type(6) {
   color: #999;
+}
+
+.footer {
+  width: 100%;
+  margin-top: 80px;
+  background: #ff5ba0;
+}
+.footer .contentbox {
+  width: 1200px;
+  height: 488px;
+  background-image: url(https://s10.mogucdn.com/mlcdn/c45406/181031_40flk9d5hkkjf44246248clfl77f1_1440x500.jpg);
+  margin: 0 auto;
+  position: relative;
+}
+.footer .contentbox .brand {
+  position: absolute;
+  top: 50px;
+  left: 515px;
+  width: 170px;
+  height: 50px;
+  margin: 0 auto;
+}
+.footer .contentbox .brand img {
+  width: 100%;
+  height: 100%;
+}
+.footer .contentbox .content {
+  position: absolute;
+  top: 100px;
+  width: 100%;
+  height: 200px;
+  margin-top: 40px;
+}
+.footer .contentbox .content .top {
+  display: flex;
+  justify-content: flex-start;
+}
+.footer .contentbox .content .top p {
+  padding-left: 30px;
+  width: 270px;
+  font-size: 15px;
+  color: white;
+}
+.footer .contentbox .content .xian {
+  width: 100%;
+}
+.footer .contentbox .content .xian p {
+  float: left;
+  margin: 5px 240px 5px 30px;
+  width: 30px;
+  height: 1px;
+  background: white;
+}
+.footer .contentbox .content .items01 {
+  width: 100%;
+  margin-top: 35px;
+}
+.footer .contentbox .content .items01 li {
+  float: left;
+  width: 300px;
+  height: 150px;
+}
+.footer .contentbox .content .items01 li p {
+  height: 34px;
+  margin-left: 30px;
+  font-size: 13px;
+  color: white;
+}
+.footer .contentbox .content .items01 li p:hover {
+  color: orange;
+}
+.footer .contentbox .content .items02 {
+  margin-left: 90px;
+  width: 100%;
+  margin-top: 25px;
+}
+.footer .contentbox .content .items02 li {
+  float: left;
+  padding: 0 20px;
+  border-right: 1px solid white;
+  font-size: 13px;
+  color: white;
+}
+.footer .contentbox .content .items02 li:hover {
+  color: orange;
+}
+.footer .contentbox .content .items02 li:last-of-type {
+  border-right: none;
+}
+.footer .contentbox .bottom {
+  position: absolute;
+  top: 370px;
+  width: 100%;
+}
+.footer .contentbox .bottom p {
+  font-size: 13px;
+  color: white;
+  margin: 15px 0;
+  text-align: center;
 }
 
 /*# sourceMappingURL=list.css.map */
