--- a/src/sass_style/cart.scss
+++ b/src/sass_style/cart.scss
@@ -333,5 +333,194 @@ li {
             border-bottom: 3px solid #ff4466;
         }
     }
-    .cart_nav {}
+    .cart_nav {
+        width: 1200px;
+        height: 45px;
+        margin: 0 auto;
+        background: #f6f6f6;
+        ul {
+            li {
+                line-height: 45px;
+                font-size: 13px;
+                float: left;
+            }
+            li:nth-of-type(1) {
+                margin-left: 26px;
+            }
+            li:nth-of-type(2) {
+                margin-left: 125px;
+            }
+            li:nth-of-type(3) {
+                margin-left: 600px;
+            }
+            li:nth-of-type(4) {
+                margin-left: 65pxpx;
+            }
+            li:nth-of-type(5) {
+                margin-left: 70px;
+            }
+            li:nth-of-type(6) {
+                margin-left: 60px;
+            }
+        }
+    }
+    .cart_list {
+        width: 1200px;
+        margin: 20px auto 0;
+        nav {
+            li {
+                margin: 10px 0;
+                width: 1200px;
+                height: 150px;
+                border: 1px solid #999;
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                .pic {
+                    width: 550px;
+                    margin-left: -30px;
+                    img {
+                        float: left;
+                        width: 78px;
+                        height: 78px;
+                    }
+                    p {
+                        float: left;
+                        font-size: 13px;
+                        margin-left: 15px;
+                    }
+                }
+                .list_message {
+                    font-size: 13px;
+                    color: grey;
+                }
+                .list_price {
+                    span {
+                        font-size: 13px;
+                        text-decoration: line-through;
+                        color: grey;
+                    }
+                    p {
+                        font-size: 15px;
+                    }
+                }
+                .list_num {
+                    input {
+                        width: 60px;
+                    }
+                }
+                .list_total {
+                    color: #ff4466;
+                    font-size: 20px;
+                }
+                a {
+                    color: black;
+                    font-size: 13px;
+                }
+                a:hover {
+                    text-decoration: underline black;
+                }
+            }
+        }
+    }
+}
+
+.footer {
+    width: 100%;
+    margin-top: 80px;
+    background: #ff5ba0;
+    .contentbox {
+        width: 1200px;
+        height: 488px;
+        background-image: url(https://s10.mogucdn.com/mlcdn/c45406/181031_40flk9d5hkkjf44246248clfl77f1_1440x500.jpg);
+        margin: 0 auto;
+        position: relative;
+        .brand {
+            position: absolute;
+            top: 50px;
+            left: 515px;
+            width: 170px;
+            height: 50px;
+            margin: 0 auto;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .content {
+            position: absolute;
+            top: 100px;
+            width: 100%;
+            height: 200px;
+            margin-top: 40px;
+            .top {
+                display: flex;
+                justify-content: flex-start;
+                p {
+                    padding-left: 30px;
+                    width: 270px;
+                    font-size: 15px;
+                    color: white;
+                }
+            }
+            .xian {
+                width: 100%;
+                p {
+                    float: left;
+                    margin: 5px 240px 5px 30px;
+                    width: 30px;
+                    height: 1px;
+                    background: white;
+                }
+            }
+            .items01 {
+                width: 100%;
+                margin-top: 35px;
+                li {
+                    float: left;
+                    width: 300px;
+                    height: 150px;
+                    p {
+                        height: 34px;
+                        margin-left: 30px;
+                        font-size: 13px;
+                        color: white;
+                    }
+                    p:hover {
+                        color: orange;
+                    }
+                }
+            }
+            .items02 {
+                margin-left: 90px;
+                width: 100%;
+                margin-top: 25px;
+                li {
+                    float: left;
+                    padding: 0 20px;
+                    border-right: 1px solid white;
+                    font-size: 13px;
+                    color: white;
+                }
+                li:hover {
+                    color: orange;
+                }
+                li:last-of-type {
+                    border-right: none;
+                    ;
+                }
+            }
+        }
+        .bottom {
+            position: absolute;
+            top: 370px;
+            width: 100%;
+            p {
+                font-size: 13px;
+                color: white;
+                margin: 15px 0;
+                text-align: center;
+            }
+        }
+    }
 }
