--- a/src/sass_style/detail.scss
+++ b/src/sass_style/detail.scss
@@ -32,6 +32,10 @@ li {
     letter-spacing: 2px;
 }
 
+#common-nav li a {
+    color: white;
+}
+
 #common-nav li:hover {
     background: #e4556d;
 }
@@ -138,6 +142,10 @@ li {
     margin-left: 90px;
 }
 
+.header-wrap .search-nav ul li a {
+    color: black;
+}
+
 .header-wrap .search-content {
     height: 44px;
     margin-top: 30px;
@@ -221,7 +229,7 @@ li {
     width: 100%;
     height: 150px;
     .bigpic {
-        width: 1536px;
+        width: 1400px;
         height: 121px;
         margin: 0 auto;
         img {
