--- a/src/sass_style/index.scss
+++ b/src/sass_style/index.scss
@@ -186,6 +186,7 @@ body {
                         height: 30px;
                     }
                     p {
+                        color: black;
                         padding-top: 12px;
                         margin-left: 5px;
                         font-size: 15px;
