--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -408,6 +408,53 @@ li {
 .cart_wrap .cart_list nav li a:hover {
   text-decoration: underline black;
 }
+.cart_wrap .cart_footer {
+  width: 1200px;
+  height: 45px;
+  margin: 0 auto;
+  background: #f6f6f6;
+}
+.cart_wrap .cart_footer p {
+  float: left;
+  line-height: 45px;
+  font-size: 13px;
+}
+.cart_wrap .cart_footer p:nth-of-type(1),
+.cart_wrap .cart_footer p:nth-of-type(2),
+.cart_wrap .cart_footer p:nth-of-type(3),
+.cart_wrap .cart_footer p:nth-of-type(4) {
+  margin-left: 25px;
+  cursor: pointer;
+}
+.cart_wrap .cart_footer p:nth-of-type(2):hover,
+.cart_wrap .cart_footer p:nth-of-type(3):hover,
+.cart_wrap .cart_footer p:nth-of-type(4):hover {
+  text-decoration: underline;
+}
+.cart_wrap .cart_footer p:nth-of-type(5) {
+  margin-left: 492px;
+}
+.cart_wrap .cart_footer p:nth-of-type(5) span {
+  color: #e4556d;
+}
+.cart_wrap .cart_footer p:nth-of-type(6) {
+  margin-left: 10px;
+  font-size: 25px;
+  color: #ff4466;
+  font-weight: bold;
+}
+.cart_wrap .cart_footer p:nth-of-type(7) {
+  margin-left: 25px;
+  width: 150px;
+  height: 100%;
+  background: #999;
+  text-align: center;
+  font-size: 22px;
+  color: white;
+}
+.cart_wrap .cart_footer p:nth-of-type(7):hover {
+  opacity: 0.8;
+}
 
 .footer {
   width: 100%;
