--- a/src/sass_style/cart.scss
+++ b/src/sass_style/cart.scss
@@ -423,6 +423,53 @@ li {
             }
         }
     }
+    .cart_footer {
+        width: 1200px;
+        height: 45px;
+        margin: 0 auto;
+        background: #f6f6f6;
+        p {
+            float: left;
+            line-height: 45px;
+            font-size: 13px;
+        }
+        p:nth-of-type(1),
+        p:nth-of-type(2),
+        p:nth-of-type(3),
+        p:nth-of-type(4) {
+            margin-left: 25px;
+            cursor: pointer;
+        }
+        p:nth-of-type(2):hover,
+        p:nth-of-type(3):hover,
+        p:nth-of-type(4):hover {
+            text-decoration: underline;
+        }
+        p:nth-of-type(5) {
+            margin-left: 492px;
+            span {
+                color: #e4556d;
+            }
+        }
+        p:nth-of-type(6) {
+            margin-left: 10px;
+            font-size: 25px;
+            color: #ff4466;
+            font-weight: bold;
+        }
+        p:nth-of-type(7) {
+            margin-left: 25px;
+            width: 150px;
+            height: 100%;
+            background: #999;
+            text-align: center;
+            font-size: 22px;
+            color: white;
+        }
+        p:nth-of-type(7):hover {
+            opacity: 0.8;
+        }
+    }
 }
 
 .footer {
