--- a/src/sass_style/detail.scss
+++ b/src/sass_style/detail.scss
@@ -485,7 +485,7 @@ li {
                     p.xuxian {
                         border-style: dashed;
                     }
-                    p:not(.xuxian):hover {
+                    p:not(.xuxian).active {
                         border: 2px solid #999;
                     }
                 }
@@ -519,7 +519,7 @@ li {
                     p.xuxian {
                         border-style: dashed;
                     }
-                    p:not(.xuxian):hover {
+                    p:not(.xuxian).active {
                         border: 2px solid #999;
                         padding: 0 9px;
                     }
