--- a/src/sass_style/index.scss
+++ b/src/sass_style/index.scss
@@ -412,13 +412,11 @@ body {
                 float: left;
                 width: 210px;
                 height: 270px;
-                background: red;
                 margin: 10px 15px;
                 position: relative;
                 .pic {
                     width: 100%;
                     height: 210px;
-                    background: rebeccapurple;
                     img {
                         width: 100%;
                         height: 100%;
@@ -721,6 +719,7 @@ body {
             left: 0;
             width: 3780px;
             height: 560;
+            z-index: 5;
             li {
                 width: 630px;
                 height: 560px;
@@ -733,7 +732,6 @@ body {
                     margin-bottom: -10px;
                     width: 185px;
                     height: 230px;
-                    background: yellow;
                     img {
                         width: 100%;
                         height: 180px;
@@ -759,6 +757,7 @@ body {
             bottom: 10px;
             width: 110px;
             height: 20px;
+            z-index: 999;
             p {
                 float: left;
                 width: 10px;
@@ -768,7 +767,7 @@ body {
                 margin: 5px 5px;
                 cursor: pointer;
             }
-            p:hover {
+            p.active {
                 background: black;
             }
         }
@@ -803,14 +802,13 @@ body {
             top: 64px;
             width: 310px;
             height: 470px;
-            background: yellowgreen;
             display: none;
             a {
                 display: block;
                 margin: 10px 10px;
                 width: 280px;
                 height: 100px;
-                background: yellow;
+                color: black;
                 img {
                     width: 100px;
                     height: 100px;
