--- a/src/sass_style/index.scss
+++ b/src/sass_style/index.scss
@@ -728,6 +728,7 @@ body {
                 justify-content: space-evenly;
                 flex-wrap: wrap;
                 a {
+                    color: black;
                     margin-top: 10px;
                     margin-bottom: -10px;
                     width: 185px;
@@ -737,6 +738,7 @@ body {
                         height: 180px;
                     }
                     p {
+                        color: black;
                         font-size: 13px;
                         width: 180px;
                         white-space: nowrap;
