--- a/src/sass_style/registry.scss
+++ b/src/sass_style/registry.scss
@@ -86,7 +86,7 @@ li {
             }
             span {
                 display: block;
-                width: 340px;
+                width: 240px;
                 font-size: 15px;
                 position: relative;
                 color: red;
@@ -99,6 +99,10 @@ li {
             input {
                 background: #f83559;
                 border: none;
+                cursor: pointer;
+            }
+            input:hover {
+                opacity: 0.7;
             }
         }
     }
