--- a/src/css/list.css
+++ b/src/css/list.css
@@ -5,10 +5,15 @@
 
 a {
   text-decoration: none;
+  color: black;
 }
 
 li {
   list-style: none;
+}
+
+body {
+  background: #f8f5f5;
 }
 
 #common-nav {
@@ -19,7 +24,6 @@ li {
   right: 0;
   background: #202020;
 }
-
 #common-nav li {
   font-size: 14px;
   width: 100%;
@@ -31,20 +35,15 @@ li {
   cursor: pointer;
   letter-spacing: 2px;
 }
-
-#common-nav li a {
-  color: white;
-}
-
 #common-nav li:hover {
   background: #e4556d;
 }
-
 #common-nav li:first-of-type {
   height: 40px;
 }
-
 #common-nav li:last-of-type {
+  z-index: 999;
+  background: #202020;
   border-top: 1px white solid;
   position: absolute;
   bottom: 0;
@@ -54,28 +53,25 @@ li {
 .header {
   width: 100%;
   clear: both;
+  background: white;
 }
-
-.header-nav {
+.header .header-nav {
   height: 33px;
   background: #fff;
   border-bottom: 1px solid #f0f0f0;
   margin: 0 auto;
 }
-
-.header-nav-wrap {
+.header .header-nav .header-nav-wrap {
   width: 1200px;
   height: 100%;
   margin: 0 auto;
 }
-
-.header-nav-content {
+.header .header-nav .header-nav-wrap .header-nav-content {
   float: right;
   line-height: 33px;
   position: relative;
 }
-
-.header-nav-content a {
+.header .header-nav .header-nav-wrap .header-nav-content a {
   font: 12px/1.6 tahoma, arial, sans-serif;
   font-weight: 300;
   margin: 0 10px;
@@ -84,80 +80,71 @@ li {
   cursor: pointer;
   color: #999;
 }
-
-.header-nav-content a span {
+.header .header-nav .header-nav-wrap .header-nav-content a span {
   color: #ffb7c4;
   font-size: 12px;
 }
-
-.header-nav-content a:last-of-type {
+.header .header-nav .header-nav-wrap .header-nav-content a:last-of-type {
   position: relative;
   margin-right: 0;
   border-right: none;
   padding-right: 0;
 }
-
-.header-nav-content .header-abouts-box {
+.header .header-nav .header-nav-wrap .header-nav-content .header-abouts-box {
   position: absolute;
-  top: 30px;
+  top: 25px;
   right: -159px;
   width: 960px;
   height: 500px;
-  background: yellow;
+  background: orange;
   display: none;
+  z-index: 999;
 }
-
-.header-wrap {
+.header .header-wrap {
   width: 1200px;
   height: 100px;
   margin: 0 auto;
 }
-
-.header-wrap .tubiao img {
+.header .header-wrap .tubiao img {
   width: 130px;
   height: 100px;
   float: left;
 }
-
-.header-wrap .mulu {
+.header .header-wrap .mulu {
   float: left;
   padding-left: 32px;
   padding-top: 40px;
   position: relative;
   cursor: pointer;
 }
-
-.header-wrap .mulu-list {
+.header .header-wrap .mulu .mulu-list {
   position: absolute;
-  top: 80px;
+  top: 59px;
   left: -230px;
-  width: 100px;
+  width: 1000px;
   height: 300px;
   background: lightgoldenrodyellow;
   display: none;
+  z-index: 999;
 }
-
-.header-wrap .search-nav {
+.header .header-wrap .search-nav {
   float: left;
   margin-left: 90px;
 }
-
-.header-wrap .search-content {
+.header .header-wrap .search-nav .search-content {
   height: 44px;
   margin-top: 30px;
   border-radius: 8px;
 }
-
-.header-wrap .search-content .search {
+.header .header-wrap .search-nav .search-content .search {
   float: left;
   background: #f7f7f7;
+  position: relative;
 }
-
-.header-wrap .search-content form {
+.header .header-wrap .search-nav .search-content .search form {
   margin-left: 20px;
 }
-
-.header-wrap .search-content input {
+.header .header-wrap .search-nav .search-content .search form input {
   margin-top: 10px;
   width: 450px;
   height: 25px;
@@ -165,8 +152,7 @@ li {
   border: none;
   background: #f7f7f7;
 }
-
-.header-wrap .search-content form .submit-btn {
+.header .header-wrap .search-nav .search-content .search form .submit-btn {
   float: right;
   width: 60px;
   height: 44px;
@@ -174,51 +160,159 @@ li {
   border-radius: 0 8px 8px 0;
   cursor: pointer;
 }
-
-.header-wrap .search-content .submit-btn span {
+.header .header-wrap .search-nav .search-content .search form .submit-btn span {
   font-size: 35px;
   margin-left: 10px;
   line-height: 44px;
   color: white;
 }
-
-.header-wrap .search-content ul {
+.header .header-wrap .search-nav .search-content .search .search_box {
+  width: 470px;
+  box-sizing: border-box;
+  background: white;
+  border: 1px solid #dbdbdb;
+  position: absolute;
+  top: 43px;
+  z-index: 998;
+}
+.header .header-wrap .search-nav .search-content .search .search_box > li {
+  font-size: 15px;
+  cursor: pointer;
+  padding: 5px 10px;
+}
+.header .header-wrap .search-nav .search-content .search .search_box > li a {
+  color: black;
+}
+.header .header-wrap .search-nav .search-content ul {
   float: left;
 }
-
-.header-wrap .search-content ul li {
-  /* width: 35px; */
+.header .header-wrap .search-nav .search-content ul li {
   height: 44px;
   margin: 0 12px;
   float: left;
   cursor: pointer;
 }
-
-.header-wrap .search-content ul li span {
+.header .header-wrap .search-nav .search-content ul li span {
   font-size: 28px;
 }
-
-.header-wrap .search-content ul li p {
+.header .header-wrap .search-nav .search-content ul li p {
   font-size: 12px;
 }
-
-.header-wrap .login {
+.header .header-wrap .search-nav .search-content .login {
   float: left;
   margin-left: 65px;
 }
-
-.header-wrap .login img {
+.header .header-wrap .search-nav .search-content .login img {
   margin-top: 8px;
   float: left;
   width: 30px;
   height: 30px;
 }
-
-.header-wrap .login p {
+.header .header-wrap .search-nav .search-content .login p {
+  color: black;
   padding-top: 12px;
   margin-left: 5px;
   font-size: 15px;
   float: left;
+}
+
+.footer {
+  width: 100%;
+  margin-top: 80px;
+  background: #ff5ba0;
+}
+.footer .contentbox {
+  width: 1200px;
+  height: 488px;
+  background-image: url(https://s10.mogucdn.com/mlcdn/c45406/181031_40flk9d5hkkjf44246248clfl77f1_1440x500.jpg);
+  margin: 0 auto;
+  position: relative;
+}
+.footer .contentbox .brand {
+  position: absolute;
+  top: 50px;
+  left: 515px;
+  width: 170px;
+  height: 50px;
+  margin: 0 auto;
+}
+.footer .contentbox .brand img {
+  width: 100%;
+  height: 100%;
+}
+.footer .contentbox .content {
+  position: absolute;
+  top: 100px;
+  width: 100%;
+  height: 200px;
+  margin-top: 40px;
+}
+.footer .contentbox .content .top {
+  display: flex;
+  justify-content: flex-start;
+}
+.footer .contentbox .content .top p {
+  padding-left: 30px;
+  width: 270px;
+  font-size: 15px;
+  color: white;
+}
+.footer .contentbox .content .xian {
+  width: 100%;
+}
+.footer .contentbox .content .xian p {
+  float: left;
+  margin: 5px 240px 5px 30px;
+  width: 30px;
+  height: 1px;
+  background: white;
+}
+.footer .contentbox .content .items01 {
+  width: 100%;
+  margin-top: 35px;
+}
+.footer .contentbox .content .items01 li {
+  float: left;
+  width: 300px;
+  height: 150px;
+}
+.footer .contentbox .content .items01 li p {
+  height: 34px;
+  margin-left: 30px;
+  font-size: 13px;
+  color: white;
+}
+.footer .contentbox .content .items01 li p:hover {
+  color: orange;
+}
+.footer .contentbox .content .items02 {
+  margin-left: 90px;
+  width: 100%;
+  margin-top: 25px;
+}
+.footer .contentbox .content .items02 li {
+  float: left;
+  padding: 0 20px;
+  border-right: 1px solid white;
+  font-size: 13px;
+  color: white;
+}
+.footer .contentbox .content .items02 li:hover {
+  color: orange;
+}
+.footer .contentbox .content .items02 li:last-of-type {
+  border-right: none;
+}
+.footer .contentbox .bottom {
+  position: absolute;
+  top: 370px;
+  width: 100%;
+}
+.footer .contentbox .bottom p {
+  font-size: 13px;
+  color: white;
+  margin: 15px 0;
+  text-align: center;
 }
 
 .body_wrap {
@@ -410,105 +504,6 @@ li {
 .body_wrap .goods_content .goods .price span:nth-of-type(5),
 .body_wrap .goods_content .goods .price span:nth-of-type(6) {
   color: #999;
-}
-
-.footer {
-  width: 100%;
-  margin-top: 80px;
-  background: #ff5ba0;
-}
-.footer .contentbox {
-  width: 1200px;
-  height: 488px;
-  background-image: url(https://s10.mogucdn.com/mlcdn/c45406/181031_40flk9d5hkkjf44246248clfl77f1_1440x500.jpg);
-  margin: 0 auto;
-  position: relative;
-}
-.footer .contentbox .brand {
-  position: absolute;
-  top: 50px;
-  left: 515px;
-  width: 170px;
-  height: 50px;
-  margin: 0 auto;
-}
-.footer .contentbox .brand img {
-  width: 100%;
-  height: 100%;
-}
-.footer .contentbox .content {
-  position: absolute;
-  top: 100px;
-  width: 100%;
-  height: 200px;
-  margin-top: 40px;
-}
-.footer .contentbox .content .top {
-  display: flex;
-  justify-content: flex-start;
-}
-.footer .contentbox .content .top p {
-  padding-left: 30px;
-  width: 270px;
-  font-size: 15px;
-  color: white;
-}
-.footer .contentbox .content .xian {
-  width: 100%;
-}
-.footer .contentbox .content .xian p {
-  float: left;
-  margin: 5px 240px 5px 30px;
-  width: 30px;
-  height: 1px;
-  background: white;
-}
-.footer .contentbox .content .items01 {
-  width: 100%;
-  margin-top: 35px;
-}
-.footer .contentbox .content .items01 li {
-  float: left;
-  width: 300px;
-  height: 150px;
-}
-.footer .contentbox .content .items01 li p {
-  height: 34px;
-  margin-left: 30px;
-  font-size: 13px;
-  color: white;
-}
-.footer .contentbox .content .items01 li p:hover {
-  color: orange;
-}
-.footer .contentbox .content .items02 {
-  margin-left: 90px;
-  width: 100%;
-  margin-top: 25px;
-}
-.footer .contentbox .content .items02 li {
-  float: left;
-  padding: 0 20px;
-  border-right: 1px solid white;
-  font-size: 13px;
-  color: white;
-}
-.footer .contentbox .content .items02 li:hover {
-  color: orange;
-}
-.footer .contentbox .content .items02 li:last-of-type {
-  border-right: none;
-}
-.footer .contentbox .bottom {
-  position: absolute;
-  top: 370px;
-  width: 100%;
-}
-.footer .contentbox .bottom p {
-  font-size: 13px;
-  color: white;
-  margin: 15px 0;
-  text-align: center;
 }
 
 /*# sourceMappingURL=list.css.map */
