--- a/src/sass_style/detail.scss
+++ b/src/sass_style/detail.scss
@@ -1,230 +1,5 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-a {
-    text-decoration: none;
-}
-
-li {
-    list-style: none;
-}
-
-#common-nav {
-    width: 30px;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    right: 0;
-    background: #202020;
-}
-
-#common-nav li {
-    font-size: 14px;
-    width: 100%;
-    text-align: center;
-    border-top: 1px solid black;
-    border-bottom: 1px black;
-    padding: 8px 0;
-    color: white;
-    cursor: pointer;
-    letter-spacing: 2px;
-}
-
-#common-nav li a {
-    color: white;
-}
-
-#common-nav li:hover {
-    background: #e4556d;
-}
-
-#common-nav li:first-of-type {
-    height: 40px;
-}
-
-#common-nav li:last-of-type {
-    border-top: 1px white solid;
-    position: absolute;
-    bottom: 0;
-    font-size: 12px;
-}
-
-.header {
-    width: 100%;
-    clear: both;
-}
-
-.header-nav {
-    height: 33px;
-    background: #fff;
-    border-bottom: 1px solid #f0f0f0;
-    margin: 0 auto;
-}
-
-.header-nav-wrap {
-    width: 1200px;
-    height: 100%;
-    margin: 0 auto;
-}
-
-.header-nav-content {
-    float: right;
-    line-height: 33px;
-    position: relative;
-}
-
-.header-nav-content a {
-    font: 12px/1.6 tahoma, arial, sans-serif;
-    font-weight: 300;
-    margin: 0 10px;
-    border-right: 1px solid #999;
-    padding-right: 20px;
-    cursor: pointer;
-    color: #999;
-}
-
-.header-nav-content a span {
-    color: #ffb7c4;
-    font-size: 12px;
-}
-
-.header-nav-content a:last-of-type {
-    position: relative;
-    margin-right: 0;
-    border-right: none;
-    padding-right: 0;
-}
-
-.header-nav-content .header-abouts-box {
-    position: absolute;
-    top: 30px;
-    right: -159px;
-    width: 960px;
-    height: 500px;
-    background: yellow;
-    display: none;
-}
-
-.header-wrap {
-    width: 1200px;
-    height: 100px;
-    margin: 0 auto;
-}
-
-.header-wrap .tubiao img {
-    width: 130px;
-    height: 100px;
-    float: left;
-}
-
-.header-wrap .mulu {
-    float: left;
-    padding-left: 32px;
-    padding-top: 40px;
-    position: relative;
-    cursor: pointer;
-}
-
-.header-wrap .mulu-list {
-    position: absolute;
-    top: 80px;
-    left: -230px;
-    width: 100px;
-    height: 300px;
-    background: lightgoldenrodyellow;
-    display: none;
-}
-
-.header-wrap .search-nav {
-    float: left;
-    margin-left: 90px;
-}
-
-.header-wrap .search-nav ul li a {
-    color: black;
-}
-
-.header-wrap .search-content {
-    height: 44px;
-    margin-top: 30px;
-    border-radius: 8px;
-}
-
-.header-wrap .search-content .search {
-    float: left;
-    background: #f7f7f7;
-}
-
-.header-wrap .search-content form {
-    margin-left: 20px;
-}
-
-.header-wrap .search-content input {
-    margin-top: 10px;
-    width: 450px;
-    height: 25px;
-    outline: none;
-    border: none;
-    background: #f7f7f7;
-}
-
-.header-wrap .search-content form .submit-btn {
-    float: right;
-    width: 60px;
-    height: 44px;
-    background: #999;
-    border-radius: 0 8px 8px 0;
-    cursor: pointer;
-}
-
-.header-wrap .search-content .submit-btn span {
-    font-size: 35px;
-    margin-left: 10px;
-    line-height: 44px;
-    color: white;
-}
-
-.header-wrap .search-content ul {
-    float: left;
-}
-
-.header-wrap .search-content ul li {
-    /* width: 35px; */
-    height: 44px;
-    margin: 0 12px;
-    float: left;
-    cursor: pointer;
-}
-
-.header-wrap .search-content ul li span {
-    font-size: 28px;
-}
-
-.header-wrap .search-content ul li p {
-    font-size: 12px;
-}
-
-.header-wrap .login {
-    float: left;
-    margin-left: 65px;
-}
-
-.header-wrap .login img {
-    margin-top: 8px;
-    float: left;
-    width: 30px;
-    height: 30px;
-}
-
-.header-wrap .login p {
-    padding-top: 12px;
-    margin-left: 5px;
-    font-size: 15px;
-    float: left;
-}
-
+@charset "utf-8";
+@import "./header.scss";
 .storepic {
     width: 100%;
     height: 150px;
@@ -337,6 +112,29 @@ li {
                 img {
                     width: 100%;
                     height: 100%;
+                }
+                .zoom {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    background: #e4556d;
+                    opacity: 0.7;
+                    display: none;
+                }
+            }
+            .zoombox {
+                display: none;
+                position: absolute;
+                top: 0;
+                left: 400px;
+                width: 500px;
+                height: 500px;
+                z-index: 999;
+                overflow: hidden;
+                img {
+                    position: absolute;
+                    width: 600px;
+                    height: 900px
                 }
             }
             .smallpicbox {
