--- a/src/sass_style/index.scss
+++ b/src/sass_style/index.scss
@@ -1,228 +1,11 @@
 @charset "utf-8";
-* {
-    margin: 0;
-    padding: 0;
-}
-
-a {
-    text-decoration: none;
-}
-
-li {
-    list-style: none;
-}
-
-body {
-    background: rgb(248, 245, 245);
-}
-
-#common-nav {
-    width: 30px;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    right: 0;
-    background: #202020;
-    li {
-        font-size: 14px;
-        width: 100%;
-        text-align: center;
-        border-top: 1px solid black;
-        border-bottom: 1px black;
-        padding: 8px 0;
-        color: white;
-        cursor: pointer;
-        letter-spacing: 2px;
-    }
-    li:hover {
-        background: rgb(228, 85, 109);
-    }
-    li:first-of-type {
-        height: 40px;
-    }
-    li:last-of-type {
-        z-index: 999;
-        background: #202020;
-        border-top: 1px white solid;
-        position: absolute;
-        bottom: 0;
-        font-size: 12px;
-    }
-}
-
-.header {
-    width: 100%;
-    clear: both;
-    background: white;
-    .header-nav {
-        height: 33px;
-        background: #fff;
-        border-bottom: 1px solid #f0f0f0;
-        margin: 0 auto;
-        .header-nav-wrap {
-            width: 1200px;
-            height: 100%;
-            margin: 0 auto;
-            .header-nav-content {
-                float: right;
-                line-height: 33px;
-                position: relative;
-                a {
-                    font: 12px/1.6 tahoma, arial, sans-serif;
-                    font-weight: 300;
-                    margin: 0 10px;
-                    border-right: 1px solid #999;
-                    padding-right: 20px;
-                    cursor: pointer;
-                    color: #999;
-                    span {
-                        color: #ffb7c4;
-                        font-size: 12px;
-                    }
-                }
-                a:last-of-type {
-                    position: relative;
-                    margin-right: 0;
-                    border-right: none;
-                    padding-right: 0;
-                }
-                .header-abouts-box {
-                    position: absolute;
-                    top: 25px;
-                    right: -159px;
-                    width: 960px;
-                    height: 500px;
-                    background: orange;
-                    display: none;
-                    z-index: 999;
-                }
-            }
-        }
-    }
-    .header-wrap {
-        width: 1200px;
-        height: 100px;
-        margin: 0 auto;
-        .tubiao {
-            img {
-                width: 130px;
-                height: 100px;
-                float: left;
-            }
-        }
-        .mulu {
-            float: left;
-            padding-left: 32px;
-            padding-top: 40px;
-            position: relative;
-            cursor: pointer;
-            .mulu-list {
-                position: absolute;
-                top: 59px;
-                left: -230px;
-                width: 1000px;
-                height: 300px;
-                background: lightgoldenrodyellow;
-                display: none;
-                z-index: 999;
-            }
-        }
-        .search-nav {
-            float: left;
-            margin-left: 90px;
-            .search-content {
-                height: 44px;
-                margin-top: 30px;
-                border-radius: 8px;
-                .search {
-                    float: left;
-                    background: #f7f7f7;
-                    position: relative;
-                    form {
-                        margin-left: 20px;
-                        input {
-                            margin-top: 10px;
-                            width: 450px;
-                            height: 25px;
-                            outline: none;
-                            border: none;
-                            background: #f7f7f7;
-                        }
-                        .submit-btn {
-                            float: right;
-                            width: 60px;
-                            height: 44px;
-                            background: #999;
-                            border-radius: 0 8px 8px 0;
-                            cursor: pointer;
-                            span {
-                                font-size: 35px;
-                                margin-left: 10px;
-                                line-height: 44px;
-                                color: white;
-                            }
-                        }
-                    }
-                    .search_box {
-                        width: 470px;
-                        box-sizing: border-box;
-                        // height: 300px;
-                        background: white;
-                        border: 1px solid rgb(219, 219, 219);
-                        position: absolute;
-                        top: 43px;
-                        z-index: 998;
-                        >li {
-                            font-size: 15px;
-                            cursor: pointer;
-                            padding: 5px 10px;
-                            a {
-                                color: black;
-                            }
-                        }
-                    }
-                }
-                ul {
-                    float: left;
-                    li {
-                        height: 44px;
-                        margin: 0 12px;
-                        float: left;
-                        cursor: pointer;
-                        span {
-                            font-size: 28px;
-                        }
-                        p {
-                            font-size: 12px;
-                        }
-                    }
-                }
-                .login {
-                    float: left;
-                    margin-left: 65px;
-                    img {
-                        margin-top: 8px;
-                        float: left;
-                        width: 30px;
-                        height: 30px;
-                    }
-                    p {
-                        color: black;
-                        padding-top: 12px;
-                        margin-left: 5px;
-                        font-size: 15px;
-                        float: left;
-                    }
-                }
-            }
-        }
-    }
-}
-
+@import "./header.scss";
+@import "./footer.scss";
+$center_width:1200px;
 .body_wrap {
     width: 100%;
     .header {
-        width: 1200px;
+        width: $center_width;
         height: 40px;
         margin: 0 auto;
         .header-title {
@@ -264,7 +47,7 @@ body {
         background: #cceae2;
         .goodsitem {
             margin: 0 auto;
-            width: 1200px;
+            width: $center_width;
             height: 400px;
             position: relative;
             .items {
@@ -359,7 +142,7 @@ body {
 }
 
 .outerbox {
-    width: 1200px;
+    width: $center_width;
     height: 290px;
     margin: 20px auto 0;
     .countdown {
@@ -456,7 +239,7 @@ body {
 }
 
 .go_pic {
-    width: 1200px;
+    width: $center_width;
     height: 150px;
     margin: 10px auto;
     display: flex;
@@ -481,7 +264,7 @@ body {
 }
 
 .girl_close {
-    width: 1200px;
+    width: $center_width;
     height: 670px;
     margin: 40px auto 0;
     nav {
@@ -668,7 +451,7 @@ body {
 .girl_underwear,
 .home_textiles,
 .child_goods {
-    width: 1200px;
+    width: $center_width;
     height: 600px;
     margin: 40px auto 0;
     nav {
@@ -864,7 +647,7 @@ body {
     opacity: 0.8;
     bottom: 0;
     .content {
-        width: 1200px;
+        width: $center_width;
         height: 100%;
         margin: 0 auto;
         position: relative;
@@ -898,106 +681,6 @@ body {
             position: absolute;
             right: 20px;
             top: 15px;
-        }
-    }
-}
-
-.footer {
-    width: 100%;
-    margin-top: 80px;
-    background: #ff5ba0;
-    .contentbox {
-        width: 1200px;
-        height: 488px;
-        background-image: url(https://s10.mogucdn.com/mlcdn/c45406/181031_40flk9d5hkkjf44246248clfl77f1_1440x500.jpg);
-        margin: 0 auto;
-        position: relative;
-        .brand {
-            position: absolute;
-            top: 50px;
-            left: 515px;
-            width: 170px;
-            height: 50px;
-            margin: 0 auto;
-            img {
-                width: 100%;
-                height: 100%;
-            }
-        }
-        .content {
-            position: absolute;
-            top: 100px;
-            width: 100%;
-            height: 200px;
-            margin-top: 40px;
-            .top {
-                display: flex;
-                justify-content: flex-start;
-                p {
-                    padding-left: 30px;
-                    width: 270px;
-                    font-size: 15px;
-                    color: white;
-                }
-            }
-            .xian {
-                width: 100%;
-                p {
-                    float: left;
-                    margin: 5px 240px 5px 30px;
-                    width: 30px;
-                    height: 1px;
-                    background: white;
-                }
-            }
-            .items01 {
-                width: 100%;
-                margin-top: 35px;
-                li {
-                    float: left;
-                    width: 300px;
-                    height: 150px;
-                    p {
-                        height: 34px;
-                        margin-left: 30px;
-                        font-size: 13px;
-                        color: white;
-                    }
-                    p:hover {
-                        color: orange;
-                    }
-                }
-            }
-            .items02 {
-                margin-left: 90px;
-                width: 100%;
-                margin-top: 25px;
-                li {
-                    float: left;
-                    padding: 0 20px;
-                    border-right: 1px solid white;
-                    font-size: 13px;
-                    color: white;
-                }
-                li:hover {
-                    color: orange;
-                }
-                li:last-of-type {
-                    border-right: none;
-                    ;
-                }
-            }
-        }
-        .bottom {
-            position: absolute;
-            top: 370px;
-            width: 100%;
-            p {
-                font-size: 13px;
-                color: white;
-                margin: 15px 0;
-                text-align: center;
-            }
         }
     }
 }
